[package]
name = "diff-test-rust"
version = "0.1.0"
authors = ["Aelto <Aelto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffy = "0.2.1"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
walkdir = "2.3.2"
difference = "2.0.0"
term = "0.7.0"
term_grid = "0.2.0"
terminal_size = "0.1.16"
clap = "2.33.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }